# bayanihan

./: .env.example  .gitattributes  .gitignore  CITATION.cff  DISCLAIMER.md  LICENSE  README.md  SOUL.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
agents/: README.md  archetype_modeler.md  edp_normalizer.md  pelicun_dbformatter.md  recovery_modeler.md  thesis_extractor.md  thesis_replication_validator.md
bayanihan/: __init__.py  archetypes.py  building.py  casualties.py  edp.py  hazard.py  portfolio.py  recovery.py
bayanihan/data/: casualty_consequences.json  component_quantities.csv  consequence_repair.csv  demolition_fragility.json  fragility.csv  nonstructural_mitigation.json  ph_redi_params.json  replacement.csv  scenarios.json
bayanihan/data/edps/: collapse_fragility.parquet  edp_store.parquet  index.json
bayanihan/data/edps/source/: README.md
bayanihan/data/edps/source/modelled/: C1L_MCHC_C1_EDP-2020-07-10.csv  C1L_MCHC_C2_EDP-2020-07-10.csv  C1L_MCHC_D_EDP-2020-07-10.csv  C1M_HC_C1_EDP-2020-07-10.csv  C1M_HC_C2_EDP-2020-07-10.csv  (+10 more)
bayanihan/data/inventory/: README.md  manila_schools_demo.geojson
bayanihan/data/results/: all_scenarios_comparison.json  evf66_portfolio_summary.json  gnw72_portfolio_summary.json  mnlt815_portfolio_summary.json  wvf65_portfolio_summary.json  wvf73_base_vs_mitigated.json  wvf73_mitigated_portfolio_summary.json  wvf73_portfolio_summary.json
docs/: agentic-harness-principles.md
docs/.local/: README.md
docs/learnings/: README.md
docs/outputs/: README.md
docs/reference/: hazard_notes.md  pelicun_csv_schema.md  pelicun_recovery_notes.md  redi_methodology.md
docs/thesis/: 01_introduction.md  02_past_studies_framework.md  03_seismic_hazard.md  04_building_stock.md  05_fragility_functions.md  06_vulnerability_loss_estimation.md  07_portfolio_assessment.md  08_conclusions.md  README.md
docs/thesis/appendices/: A_seismic_hazard.md  B_building_stock.md  C_fragility_development.md  D_component_library.md
docs/thesis/data/: archetype_fragilities.yaml  archetypes.yaml  component_fragilities.yaml  component_quantities.yaml  consequence_parameters.yaml  edp_distributions.yaml  gm_record_selection.yaml  gmpe_weights.yaml  hazard_site_params.yaml  inventory_characteristics.yaml  portfolio_validation.yaml  redi_impedance_factors.yaml
docs/validation/: eval_scorecard.md
prototypes/: 2026-06-26_portfolio_demo.py  README.md
sandbox/: README.md
scripts/: README.md  build_edp_store.py  make_comparison_figures.py  make_loss_map.py  make_mitigation_figure.py  make_scenario_comparison.py  run_scenario_breadth.py  run_wvf73_mitigated.py  run_wvf73_portfolio.py
test/: conftest.py  test_archetypes.py  test_building.py  test_casualties.py  test_component_db.py  test_component_quantities.py  test_edp.py  test_hazard.py  test_inventory.py  test_package.py  test_portfolio.py  test_recovery.py
utils/: README.md  build_component_quantities_csv.py  build_wvf_distance_table.py  gen_synthetic_inventory.py
(+17 files in other folders)
